# HERP.FrontendProvider

./: CMakeLists.txt  FrontendProviderPlugin.cpp  FrontendProviderPlugin.h  HERP.FrontendProvider.Export.h  HERP.FrontendProvider.Precompiled.h  README.md
data/: AppRoute.cpp  AppRoute.h
entity/: RouteEntity.cpp  RouteEntity.h  RouteEntitySet.cpp  RouteEntitySet.h
frontend/: Component.js  index.html  manifest.json  ui5server.json
frontend/controller/: App.controller.js  Home.controller.js
frontend/i18n/: .i18n-editor-metadata  translations_en.properties
frontend/view/: App.view.xml  Home.view.xml
webServices/: AppFrameworkProvider.cpp  AppFrameworkProvider.h  CMakeLists.txt  PluginWebFilesProvider.cpp  PluginWebFilesProvider.h  UI5ResourceProvider.cpp  UI5ResourceProvider.h
